examples/java/failing/annotations/ExpectedIdeally.java
class MyClass {
        @Override
        @JsonProperty("do_something")
        public void doSomething();
}
